<resources>
    <string name="app_name">MultiTimer</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="timer" translatable="false">Timer</string>
    <string name="plus" translatable="false">+</string>
    <string name="zero" translatable="false">0</string>
    <string name="minus" translatable="false">-</string>
    <string name="zero_time" translatable="false">00:00:00</string>
    <string name="content_description_play_button">A button used to start the timer</string>
    <string name="notify_me">notify me</string>
    <string name="double_zero" translatable="false">00</string>
    <string name="colon" translatable="false">:</string>
    <string name="hours_placeholder" translatable="false">hh</string>
    <string name="minutes_placeholder" translatable="false">mm</string>
    <string name="seconds_placeholder" translatable="false">ss</string>
    <string name="pasta" translatable="false">Pasta</string>
    <string name="reset" translatable="false">reset</string>
    <string name="Setup_your_timer">Setup your timer</string>
    <string name="maximum_number_timers_title">Maximum number of timers reached</string>
    <string name="should_delete_timer_first">If you want to create a new timer, you should delete one first</string>
    <string name="create_timer">Create a Timer</string>
    <string name="timer_name">timer name</string>
    <string name="stop_timer" translatable="false">stop timer</string>
    <string name="time_up">time\'s up!</string>
    <string name="update">update</string>
    <string name="update_your_timer">update your timer</string>
    <string name="what_to_do">What do you want to do?</string>
    <string name="delete">delete</string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>
    <string name="action_about" translatable="false">About</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations" translatable="false">Enable social recommendations</string>
    <string name="pref_description_social_recommendations" translatable="false">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name" translatable="false">John Smith</string>

    <string name="pref_title_add_friends_to_messages" translatable="false">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Material Theme</item>
        <item>Dark Theme</item>
        <item>Vintage Theme</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>

    <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications" translatable="false">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="timers_color_theme">Timers\' color theme</string>
    <string name="go_pro" translatable="false">Go pro</string>
    <string name="about_app">MultiTimer was developed by Umberto D\'Ovidio.
        Check other apps from this developer in the Google Play Store and visit my website http://dovid.io.</string>
    <string name="about" translatable="false">About</string>
    <string name="tired_of_ads">Tired of ads? Go pro!</string>
    <string name="our_pro_app">With our pro app you will get rid of ads!</string>
    <string name="ready_for_a_new_look">Ready for a new look?</string>
    <string name="choose_among_themes">Choose among three beautiful themes and customize your experience!</string>
    <string name="google_play_store">Take me to the Google Play Store</string>
    <string name="need_more_timers">Need more timers?</string>
    <string name="you_can_get_up_to">Go pro and you\'ll be able to set up to 10 timers!</string>
    <string name="choose_ringtone">Choose the ringtone!</string>
    <string name="sick_of_default_ringtone">Sick of the default ringtone? With our pro app you can choose it!</string>
    <string name="welcome">Welcome!</string>
    <string name="click_on_this_button">Click on this button to add a timer</string>
    <string name="long_press_timer">If you want to delete or update this timer, long touch it. If you want to start it, press the play button</string>
    <string name="play_initial_tutorial_again">Play initial tutorial again</string>
    <string name="title_activity_ad" translatable="false">AdActivity</string>

    <string name="interstitial_ad_sample" translatable="false">Interstitial Ad Sample</string>
    <string name="start_level" translatable="false">Level 1</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>

    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-4466818474991718/4381321422</string>
    <string name="enjoy_using_multitimer">Enjoy using multitimer?</string>
    <string name="if_you_enjoy_using">If you enjoy using</string>
    <string name="please_take_a_moment_to_rate_it">, please take a moment to rate it. Thanks for your support!</string>
    <string name="name_cannot_be_empty">The name cannot be empty</string>
    <string name="hours_cannot_be_empty">Hours cannot be empty</string>
    <string name="minutes_cannot_be_empty">Minutes cannot be empty</string>
    <string name="seconds_cannot_be_empty">Seconds cannot be empty</string>
    <string name="timer_must_be_one_second_length">Timer must at least be one second long</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
</resources>
