<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AlertDialog.AppCompat.Light"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal">


    <EditText
        android:id="@+id/editTextTimerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/timer_name"
        android:maxLength="@integer/timer_max_length"
        android:textAlignment="center" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:padding="8dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="10dp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hours_placeholder"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:id="@+id/editTextHours"
                style="@android:style/Widget.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hours_placeholder"
                android:inputType="numberDecimal"
                android:maxLength="2"
                android:text="@string/double_zero"
                android:textAlignment="center"
                android:textSize="36sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="36sp"
            android:text="@string/colon"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/minutes_placeholder" />

            <EditText
                android:id="@+id/editTextMinutes"
                style="@android:style/Widget.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/minutes_placeholder"
                android:inputType="numberDecimal"
                android:maxLength="2"
                android:text="@string/double_zero"
                android:textAlignment="center"
                android:textSize="36sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:textSize="36sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/seconds_placeholder" />

            <EditText
                android:id="@+id/editTextSeconds"
                style="@android:style/Widget.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/seconds_placeholder"
                android:inputType="numberDecimal"
                android:maxLength="2"
                android:text="@string/double_zero"
                android:textAlignment="center"
                android:textSize="36sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>


